--- a/freelancer.html
+++ b/freelancer.html
@@ -5,9 +5,9 @@
 		   <title>
 		      my free lancer prject 
 		   </title>
-		       <link rel="stylesheet" href="css/freelance.css"/>
-		  	   <link rel="stylesheet" href="css/nor.css"/>   
-		       <link rel="stylesheet" href="css/all.min.css"/>
+		       <link rel="stylesheet" href="style.css"/>
+		  	   <link rel="stylesheet" href="nor.css"/>   
+		       <link rel="stylesheet" href="all.min.css"/>
 	  </head>
 <!-- start body -->
 <body>
@@ -15,7 +15,7 @@
   <div class="header">
 	   <div class="navbar">
 	     <div class="container">
-		    <img src="photos/logo.png" class="fl-left"/>
+		    <img src="logo.png" class="fl-left"/>
 			  <ul>
 			    <li class="fl-left"><a href="#">  how it works</a></li>
 				<li class="fl-right"><input type="button" value="post a project"/></li>
@@ -55,13 +55,13 @@
 		  <div class="container">
 		     <ul>
 			   <li class="as fl-left">As used by</li> 
-				 <li class="fl-left"><img src="photos/01.png"/></li>
-				   <li class="fl-left"><img src="photos/02.png"/></li>
-				     <li class="fl-left"><img src="photos/03.png"/></li>
-				        <li class="fl-left"><img src="photos/04.png"/></li>
-			       <li class="fl-left"><img src="photos/05.png"/></li>
-				 <li class="fl-left"><img src="photos/06.png"/></li>
-			  <li class="fl-left"><img src="photos/07.png"/></li>
+				 <li class="fl-left"><img src="01.png"/></li>
+				   <li class="fl-left"><img src="02.png"/></li>
+				     <li class="fl-left"><img src="03.png"/></li>
+				        <li class="fl-left"><img src="04.png"/></li>
+			       <li class="fl-left"><img src="05.png"/></li>
+				 <li class="fl-left"><img src="06.png"/></li>
+			  <li class="fl-left"><img src="07.png"/></li>
 			 </ul>	
 		  </div> 
 		 
@@ -83,7 +83,7 @@
    
     <div class="container">
 			 <div class="min">
-				 <img src="photos/a1.png"/>
+				 <img src="a1.png"/>
 				 <h3>
 					 Post a job
 				 </h3>
@@ -93,7 +93,7 @@
 			 
 			 </div>
 			<div class="min">
-				 <img src="photos/a2.png"/>
+				 <img src="a2.png"/>
 				 <h3>
                     Choose freelancers
 				 </h3>
@@ -103,7 +103,7 @@
 			 
 			 </div>
 			<div class="min">
-				 <img src="photos/a3.png"/>
+				 <img src="a3.png"/>
 				 <h3>
                       Pay safely
 				 </h3>
@@ -125,7 +125,7 @@
 	<div class="container">
       <div class="it">
 		  <div class="icon">
-			  <img src="photos/b1.png"/>
+			  <img src="b1.png"/>
 		  </div>
 	      <div class="itt">
 		     <h2>
@@ -138,7 +138,7 @@
 	  </div>
 		<div class="it">
 		  <div class="icon">
-			  <img src="photos/b2.png"/>
+			  <img src="b2.png"/>
 		  </div>
 	      <div class="itt">
 		     <h2>
@@ -151,7 +151,7 @@
 	  </div>
 		<div class="it">
 		  <div class="icon">
-			  <img src="photos/b3.png"/>
+			  <img src="b3.png"/>
 		  </div>
 	      <div class="itt">
 		     <h2>
@@ -165,7 +165,7 @@
 		<div class="cl"></div>
 		<div class="it">
 		  <div class="icon dow">
-			  <img src="photos/s1.png"/>
+			  <img src="s1.png"/>
 		  </div>
 	      <div class="itt">
 		     <h2>
@@ -179,7 +179,7 @@
 	  </div>
 		<div class="it">
 		  <div class="icon dow">
-			  <img src="photos/s2.png"/>
+			  <img src="s2.png"/>
 		  </div>
 	      <div class="itt">
 		     <h2>
@@ -192,7 +192,7 @@
 	  </div>
 		<div class="it">
 		  <div class="icon">
-			  <img src="photos/s3.png"/>
+			  <img src="s3.png"/>
 		  </div>
 	      <div class="itt">
 		     <h2>
@@ -219,21 +219,21 @@
 	          </h2>
 		         <div class="upp">
 		            <div class="wd fl-left"> 
-			           <img src="photos/n1.png">
+			           <img src="n1.png">
 			               <div class="col">
 			                <h3>web develober</h3>
 			                  <p>from $300 <span>usd</span></p>
 			               </div>
   	                 </div>
 			        <div class="wd fl-left"> 
-			           <img src="photos/n2.png">
+			           <img src="n2.png">
 			               <div class="col">
 			                <h3> graphic design</h3>
 			                  <p>from $100 <span>usd</span></p>
 			               </div>
   	                 </div>
 			        <div class="wd fl-left"> 
-			           <img src="photos/n3.png">
+			           <img src="n3.png">
 			               <div class="col">
 			                <h3> logo design</h3>
 			                  <p>from $50 <span>usd</span></p>
@@ -241,21 +241,21 @@
   	                 </div>
 			       <div class="clear"></div>
 			   <div class="wd fl-left"> 
-			           <img src="photos/n4.png">
+			           <img src="n4.png">
 			               <div class="col">
 			                <h3>marketing</h3>
 			                  <p>from $150 <span>usd</span></p>
 			               </div>
   	                 </div>
 			       <div class="wd fl-left"> 
-			           <img src="photos/n5.png">
+			           <img src="n5.png">
 			               <div class="col">
 			                <h3>writing</h3>
 			                  <p>from $50 <span>usd</span></p>
 			               </div>
   	                 </div>
 			          <div class="wd fl-left"> 
-			           <img src="photos/n6.png">
+			           <img src="n6.png">
 			               <div class="col">
 			                <h3>mobile app</h3>
 			                  <p>from $300 <span>usd / hour</span></p>
@@ -927,7 +927,7 @@
 <div class="container">
    <div class="contact">
 		      <div class="con-par">
-		         <img src="photos/ah1.png"/>
+		         <img src="ah1.png"/>
 		      </div> 
 			   <div class="con-parr">
 				     <a>FREELANCER API</a>
@@ -942,7 +942,7 @@
 <div class="container">
    <div class="flter">
 		      <div class="var">
-		         <img src="photos/ah2.png"/>
+		         <img src="ah2.png"/>
 		      </div> 
 			   <div class="lop">
 				     <a> FREELANCER ENTERPRISE </a>
@@ -961,11 +961,11 @@
     <div class="container">
 		<div class="flo">
 		<div class="log">
-		  <img src="photos/log.png"/>
+		  <img src="log.png"/>
 		</div>
 	    <div class="can">
 		   <div class="test">
-			  <img src="photos/i1.png"/>
+			  <img src="i1.png"/>
 		   </div>
 			   <div class="testt">
                  <a><span>us</span> (international) / English</a>			
@@ -973,7 +973,7 @@
 		</div>
 		 <div class="can">
 		   <div class="test">
-			  <img src="photos/i2.png"/>
+			  <img src="i2.png"/>
 		   </div>
 			   <div class="testt">
                  <a>help &amp; support</a>			
@@ -1022,8 +1022,8 @@
 	 <div class="lancer">
 		 <h2>Apps</h2>
 		  <div class="temp">
-		     <img src="photos/t1.png"/>
-			  <img src="photos/t2.png"/>
+		     <img src="t1.png"/>
+			  <img src="t2.png"/>
 		 </div>
 		 <div class="tempt">
 		   <i class="fab fa-facebook fa-lg"></i>
